# multitask

./: README.md  pyproject.toml
multitask/: install.py
tests/: test_install.py  test_multitask.py
